src/test/ui/closures/closure-wrong-kind.rs
struct X;
fn foo<T>(_: T) {}
fn bar<T: Fn(u32)>(_: T) {}

fn main() {
    let x = X;
    let closure = |_| foo(x); //~ ERROR E0525
    bar(closure);
}
